# friend

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  database.rs  main.rs
src/integrations/: discord.rs  github.rs  jira.rs  mod.rs  telegram.rs
