[package]
name = "friend"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde_json = "1.0"
base64 = "0.22"
dotenv = "0.15"
grammers-client = "0.7"
grammers-session = "0.7"
